<resources>
    <string name="app_name">LPIC Trainee-Teacher</string>
    <string name="name">Name</string>
    <string name="placeholder">...</string>
    <string name="activitytestheadline">Test-Simulation</string>
    <string name="activityrubricheadline">Rubriken</string>

    <string name="kategorieloeschen">Kategorie löschen?</string>
    <string name="category">Kategorien</string>
    <string name="categorytoast">Der Datensatz kann nicht gelöscht werden, bitte erst die korrespondierenden Rubriken löschen.</string>
    <string name="norecords">Es wurde kein Eintrag gefunden</string>

    <string name="rubrikloeschen">Rubrik löschen?</string>
    <string name="rubric">Rubriken</string>
    <string name="rubrictoast">Der Datensatz kann nicht gelöscht werden, bitte erst die korrespondierenden Fragen löschen.</string>
    <string name="starttest">Test starten</string>

    <string name="frageloeschen">Frage löschen?</string>
    <string name="frage">Fragen</string>
    <string name="erklaerung">Erklärung</string>
    <string name="questiontoast">Der Datensatz kann nicht gelöscht werden, bitte erst die korrespondierenden Antworten löschen.</string>
    <string name="art">Art</string>

    <string name="antwortloeschen">Antwort löschen?</string>
    <string name="answer">Antworten</string>

    <string name="textantwortfrage">Textantwortfrage</string>
    <string name="checkboxantwortfrage">Auswahlantwortfrage</string>
    <string name="result">Ergebnis</string>

    <string name="rbRichtig">ist richtig</string>
    <string name="rbFalsch">ist falsch</string>

    <string name="ok">OK</string>
    <string name="cancel">abbrechen</string>
    <string name="addnew">neu</string>
    <string name="edit">bearbeiten</string>
    <string name="save">speichern</string>
    <string name="update">aktualisieren</string>
    <string name="insert">einfügen</string>
    <string name="delete">löschen</string>
    <string name="previous">zurück</string>
    <string name="check">prüfen</string>
    <string name="next">weiter</string>
    <string name="emptyfield">leeres Eingabefeld</string>


    <string name="DATABASE_NAME">lpicapp.db</string>
    <integer name="DATABASE_VERSION">11</integer>

    <string name="DML_TYPE">DML_TYPE</string>
    <integer name="ADD_RECORD">0</integer>
    <integer name="UPDATE_RECORD">1</integer>

    <string name="UPDATE">Aktualisieren</string>
    <string name="INSERT">Einfügen</string>
    <string name="DELETE">Löschen</string>

    <!-- contentDescription -->
    <string name="btnBD">sd</string>
    <string name="btnInfo">hilfe</string>
    <string name="btnGlossary">glossary</string>
    <string name="btnDelete">löschen</string>
    <string name="btnEdit">bearbeiten</string>
    <string name="btnResult">Ergebnis</string>
    <string name="btnChoose">auswählen</string>
    <string name="btnGerman">deutsch</string>
    <string name="btnEnglish">englisch</string>

    <string name="btnBack">zu den Fragen</string>
    <string name="btnQuit">Prüfung beenden</string>

    <string name="tvAnzahlFragen">Anzahl Fragen:</string>
    <string name="tvAnzahlRichtig">davon richtig Beantwortet:</string>


    <string name="tvQuestionNr1">Frage</string>
    <string name="tvQuestionNr2">von</string>
    <string name="tvTimer">noch</string>


</resources>
