<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutAddUpdate"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/frage" />

                <EditText
                    android:id="@+id/etFrage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/frage"
                    android:inputType="textMultiLine"
                    android:scrollbars="vertical" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dip"
                    android:text="@string/erklaerung" />

                <EditText
                    android:id="@+id/etErklaerung"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/erklaerung"
                    android:inputType="textMultiLine"
                    android:scrollbars="vertical" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/art"
                        android:layout_marginTop="10dip" />

                    <TextView
                        android:id="@+id/tvArt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold" />

                </LinearLayout>

                <RadioGroup
                    android:id="@+id/rgArt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/rbCheckoption"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/checkboxantwortfrage"
                        android:buttonTint="@color/color_blue"/>

                    <RadioButton
                        android:id="@+id/rbTextoption"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/textantwortfrage"
                        android:buttonTint="@color/color_blue"/>

                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llbottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="12dip"
                android:layout_weight="1"
                android:gravity="right"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btnCancel"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginRight="3dip"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_cancel_black_24dp" />

                <ImageButton
                    android:id="@+id/btnDML"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="3dip"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_save_black_24dp" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>