<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="lpictraineeteacher.project.local.lpic_trainee_teacher.activitysBaseData.CategoryActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/llbottom"
        android:layout_weight="1"
        android:orientation="vertical">

        <ScrollView
            android:id="@+id/scrollViewDisplay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvHeadline"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingBottom="20dip"
                        android:text="@string/category"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvNoRecordsFound"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="15dp"
                        android:gravity="center"
                        android:text="@string/norecords"
                        android:textSize="15sp" />

                    <LinearLayout
                        android:id="@+id/llParentLayout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llbottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_weight="1"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="3dip"
            android:layout_weight="0.1"
            android:gravity="start|center_vertical"
            android:text="@string/back"
            android:textColor="@color/color_black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:background="@null"
            android:drawablePadding="10dp"
            style="?android:attr/buttonBarButtonStyle"
            />

        <Button
            android:id="@+id/btnAddNewRecord"
            android:text="@string/addnew"
            android:background="@null"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dip"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="16sp"
            android:gravity="start|center_vertical"
            android:textColor="@color/color_black"
            android:drawablePadding="10dp"
            style="?android:attr/buttonBarButtonStyle"
            />
    </LinearLayout>


</RelativeLayout>
