<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/svFooter"
        android:layout_margin="8dip"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dip">

            <LinearLayout
                android:id="@+id/llNav"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnPrev"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="3dip"
                    android:layout_marginBottom="3dip"
                    android:layout_marginTop="3dip"
                    android:layout_weight="1"
                    android:drawableStart="@drawable/prev"
                    android:gravity="start|center_vertical"
                    android:text="@string/previous"
                    android:textColor="@color/color_black"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:background="@null"
                    android:drawablePadding="10dp"
                    style="?android:attr/borderlessButtonStyle"
                    />

                <Button
                    android:id="@+id/btnCheck"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dip"
                    android:layout_marginTop="3dip"
                    android:layout_weight="1"
                    android:text="@string/check"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    style="?android:attr/borderlessButtonStyle"
                    />

                <Button
                    android:id="@+id/btnNext"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="3dip"
                    android:layout_marginBottom="3dip"
                    android:layout_marginTop="3dip"
                    android:layout_weight="1"
                    android:drawableEnd="@drawable/next"
                    android:gravity="end|center_vertical"
                    android:text="@string/next"
                    android:textColor="@color/color_black"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:background="@null"
                    android:drawablePadding="10dp"
                    style="?android:attr/borderlessButtonStyle"
                    />

            </LinearLayout>

            <TextView
                android:id="@+id/tvQuestionNr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="30dip"
                android:paddingRight="30dip"
                android:paddingTop="5dp"/>

            <ProgressBar
                android:id="@+id/progressBar"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="15dp"/>

            <TextView
                android:id="@+id/tvQuestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dip"
                android:paddingLeft="30dip"
                android:paddingRight="30dip"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/llAnswers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dip"
                android:layout_marginRight="8dip"
                android:orientation="vertical"
                android:paddingLeft="30dip"
                android:paddingRight="30dip"></LinearLayout>


            <TextView
                android:id="@+id/tvExplaination"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dip"
                android:paddingLeft="30dip"
                android:paddingRight="30dip"
                android:text=""
                android:textSize="16sp" />

        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:id="@+id/svFooter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="12dip">

            <Button
                android:id="@+id/btnBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="3dip"
                android:layout_weight="0.1"
                android:drawableStart="@drawable/back"
                android:gravity="start|center_vertical"
                android:text="@string/back"
                android:textColor="@color/color_black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:background="@null"
                android:drawablePadding="10dp"
                style="?android:attr/borderlessButtonStyle"
                />


            <ImageButton
                android:id="@+id/btnChart"
                android:contentDescription="@string/btnGlossary"
                android:src="@drawable/chart"
                android:background="@android:color/transparent"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_weight="0.1"
                android:layout_margin="3dip"
                android:padding="1dip"
                android:scaleType="fitCenter"
                />

            <Button
                android:id="@+id/btnResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start|center_vertical"
                android:layout_margin="3dip"
                android:layout_weight="1"
                android:padding="1dip"
                android:textColor="@color/color_black"
                android:textSize="16sp"
                android:text="@string/result"
                android:textStyle="bold"
                android:background="@null"
                style="?android:attr/borderlessButtonStyle"
                />

            <ImageButton
                android:id="@+id/btnGlossary"
                android:contentDescription="@string/btnGlossary"
                android:src="@drawable/glossary"
                android:background="@android:color/transparent"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_weight="0.1"
                android:layout_margin="3dip"
                android:padding="1dip"
                android:scaleType="fitCenter"
                />




        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>

